(env
 (dev     (flags :standard -rectypes -warn-error -a+31 -w +28+33-9-23-32-58-67-69))
 (release (flags :standard -rectypes -warn-error -a+31 -w +28+33-9-23-32-58-67-69)
          (ocamlopt_flags -O3 -unbox-closures)))

(library
  (name core)
  (modules distr)
  (flags -open Batteries)
  (libraries batteries yojson mlmpfr))

(executable
  (name kyber)
  (public_name kyber-calculator)
  (promote (until-clean))
  (modules kyber)
  (flags -open Batteries)
  (libraries batteries mlmpfr yojson core))

(executable
  (name fast)
  (modules fast)
  (flags -open Batteries)
  (libraries batteries mlmpfr yojson core))
